--- a/DemoSearchEngine/DemoSearchEngine.csproj
+++ b/DemoSearchEngine/DemoSearchEngine.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190926122100_ModifiedSearchCategory.cs" />
+    <Compile Remove="Migrations\20190926122100_ModifiedSearchCategory.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
