--- a/DemoSearchEngine/DemoSearchEngine.csproj
+++ b/DemoSearchEngine/DemoSearchEngine.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
